Fix login/signup modal being cut off on mobile view

--- a/src/assets/styles/cmps/LoginSignUpModal.css
+++ b/src/assets/styles/cmps/LoginSignUpModal.css
@@ -111,7 +111,7 @@
     }
 
     &.mobile {
-        transform: translate(-50%, -5%);
+        transform: translate(-50%, -25%);
     }
 
 }
